--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,31 +31,93 @@
 		</header>
 
 		<main class="page">
-			<div class="page-header__container">
-				<div class="page-header">
-				<div class="page-header__photo">
-					<img src="../PICS/page_header/man.jpg" alt="man">
-				</div>
-				<div class="page-header__content">
-					<div class="page-header__text">
-						<h1>Take your podcast to the <br> </h1>
-						<h1><span class="page-header__span1">next</span>
-						<span class="page-header__span2">level</span></h1> 
-					</div>
-					<div class="page-header__listen">
-						<h4>Listen on</h4>
-						<div class="page-header__icons">
-							<img class="page-header__icon" src="../PICS/page_header/spotify.png" alt="spotify">
-							<img class="page-header__icon" src="../PICS/page_header/iheartradio.png" alt="iheartradio">
-							<img class="page-header__icon" src="../PICS/page_header/soundcloud.png" alt="soundcloud">
-							<img class="page-header__icon" src="../PICS/page_header/deezer.png" alt="deezer">
-							<img class="page-header__icon" src="../PICS/page_header/applemusic.png" alt="applemusic">
+			<!--? ====================Page header============================ -->
+			<section class="page-header">
+				<div class="page-header__container">
+					<div class="page-header__body">
+						<div class="page-header__photo">
+							<img src="../PICS/page_header/man.jpg" alt="man">
 						</div>
-					</div>	
+						<div class="page-header__content">
+							<div class="page-header__text">
+								<h1>Take your podcast to the <br> </h1>
+								<h1><span class="page-header__span1">next</span>
+								<span class="page-header__span2">level</span></h1> 
+							</div>
+							<div class="page-header__listen">
+								<h4>Listen on</h4>
+								<div class="page-header__icons">
+									<img class="page-header__icon" src="../PICS/page_header/spotify.png" alt="spotify">
+									<img class="page-header__icon" src="../PICS/page_header/iheartradio.png" alt="iheartradio">
+									<img class="page-header__icon" src="../PICS/page_header/soundcloud.png" alt="soundcloud">
+									<img class="page-header__icon" src="../PICS/page_header/deezer.png" alt="deezer">
+									<img class="page-header__icon" src="../PICS/page_header/applemusic.png" alt="applemusic">
+								</div>
+							</div>	
+						</div>
+					</div>
 				</div>
-			</div>
-			
-			</div>
+			</section>
+
+			<!--? ====================Latest episodes-============================ -->
+			<section class="latest-episodes">
+				<div class="latest-episodes__container">
+					<div class="latest-episodes__titel title">
+						<h1 class="title__text">Latest episodes</h1>
+						<button class="title__button">View all episodes</button>
+					</div>
+					<div class="latest-episodes__body">
+						<div class="latest-episodes__items">
+							<div class="latest-episodes__item item">
+								<div class="item__body">
+									<div class="item__pic"><img src="../PICS/latest_episodes/3.jpg" alt="pic"></div>
+									<div class="item__content">
+										<div class="item__class"><span>Gear</span></div>
+										<div class="item__number">Episode <span>3</span></div>
+										<h1 class="item__title">Should you get outboard audio gear?</h1>
+										<div class="item__text">
+											Is hardware really worth it when it comes to podcasting? The answer is...it depends. 
+											Here’s our reasons on why you might want to consider picking something up.
+										</div>
+										<button class="item__button">View Episode Details</button>										
+									</div>									
+								</div>								
+							</div>			
+
+							<div class="latest-episodes__item item">
+								<div class="item__body">
+									<div class="item__pic"><img src="../PICS/latest_episodes/2.jpg" alt="pic"></div>
+									<div class="item__content">
+										<div class="item__class"><span>Tips & Tricks</span></div>
+										<div class="item__number">Episode <span>2</span></div>
+										<h1 class="item__title">Mic tricks to take you to the next level</h1>
+										<div class="item__text">
+											Stop rolling with those default settings on your mic. These small tweaks will take you from sounding good to great.
+										</div>
+										<button class="item__button">View Episode Details</button>										
+									</div>									
+								</div>								
+							</div>		
+
+							<div class="latest-episodes__item item">
+								<div class="item__body">
+									<div class="item__pic"><img src="../PICS/latest_episodes/1.jpg" alt="pic"></div>
+									<div class="item__content">
+										<div class="item__class"><span>Gear</span></div>
+										<div class="item__number">Episode <span>1</span></div>
+										<h1 class="item__title">The best microphone under $200</h1>
+										<div class="item__text">
+											With so many microphones on the market, how are you supposed to know what’s the best? Take a look at our top picks.
+										</div>
+										<button class="item__button">View Episode Details</button>										
+									</div>									
+								</div>								
+							</div>							
+						</div>						
+					</div>					
+				</div>	
+			</section>
+
 		</main>
 		
 		<footer class="footer">
