--- a/HTML/index.html
+++ b/HTML/index.html
@@ -47,11 +47,11 @@
 							<div class="page-header__listen">
 								<h4>Listen on</h4>
 								<div class="page-header__icons">
-									<img class="page-header__icon" src="../PICS/page_header/spotify.png" alt="spotify">
-									<img class="page-header__icon" src="../PICS/page_header/iheartradio.png" alt="iheartradio">
-									<img class="page-header__icon" src="../PICS/page_header/soundcloud.png" alt="soundcloud">
-									<img class="page-header__icon" src="../PICS/page_header/deezer.png" alt="deezer">
-									<img class="page-header__icon" src="../PICS/page_header/applemusic.png" alt="applemusic">
+									<a href="#"><img class="page-header__icon" src="../PICS/page_header/spotify.png" alt="spotify"></a>
+									<a href="#"><img class="page-header__icon" src="../PICS/page_header/iheartradio.png" alt="iheartradio"></a>
+									<a href="#"><img class="page-header__icon" src="../PICS/page_header/soundcloud.png" alt="soundcloud"></a>
+									<a href="#"><img class="page-header__icon" src="../PICS/page_header/deezer.png" alt="deezer"></a>
+									<a href="#"><img class="page-header__icon" src="../PICS/page_header/applemusic.png" alt="applemusic"></a>
 								</div>
 							</div>	
 						</div>
@@ -118,6 +118,44 @@
 				</div>	
 			</section>
 
+			<!--? ====================Latest episodes-============================ -->
+			<section class="about">
+				<div class="about__container">
+					<div class="about__body">
+						<div class="about__content">
+							<div class="about__circle circle">
+								<div class="circle__body"><span class="circle__arrow"></span></div>
+								<div class="circle__label">Meet your host</div>
+							</div>
+							<h1 class="about__title">Jacob Paulaner</h1>
+							<div class="about__text">
+								<p>Jacob has a background in audio engineering, and has
+									been podcasting since the early days.</p>
+								<p>He’s here to help you level up your game by
+									sharing everything he’s learned along the way.</p>
+							</div>
+							
+						</div>
+						<div class="about__pic"><img src="../PICS/about/IMAGE.png" alt="Jacob"></div>
+					</div>
+				</div>
+			</section>
+
+			<section class="subscribe">
+				<div class="subscribe__container">
+					<div class="subscribe__body">
+						<div class="subscribe__content">
+							<div class="subscribe__subtitle">Email Newsletter</div>
+							<h1 class="subscribe__title">Subscribe for updates</h1>
+						</div>
+						<form class="subscribe__form" action="">
+							<input class="subscribe__name" type="text" placeholder="Name">
+							<input class="subscribe__email" type="text" placeholder="Email">
+							<input class="subscribe__button" type="submit" value="Submit">
+						</form>
+					</div>
+				</div>
+			</section>
 		</main>
 		
 		<footer class="footer">
