--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,6 +13,8 @@
 </head>
 <body>
 	<div class="wrapper" id="wrapper">
+
+		<!--? ==================== Navigation ============================ -->
 		<header class="navbar">
 			<nav class="navbar__body">
 				<div class="navbar__logo" id="navbar__logo">Castaway</div>
@@ -31,7 +33,7 @@
 		</header>
 
 		<main class="page">
-			<!--? ====================Page header============================ -->
+			<!--? ==================== Page header ============================ -->
 			<section class="page-header">
 				<div class="page-header__container">
 					<div class="page-header__body">
@@ -59,7 +61,7 @@
 				</div>
 			</section>
 
-			<!--? ====================Latest episodes-============================ -->
+			<!--? ==================== Latest episodes ============================ -->
 			<section class="latest-episodes">
 				<div class="latest-episodes__container">
 					<div class="latest-episodes__titel title">
@@ -118,7 +120,7 @@
 				</div>	
 			</section>
 
-			<!--? ====================Latest episodes-============================ -->
+			<!--? ==================== Latest episodes ============================ -->
 			<section class="about">
 				<div class="about__container">
 					<div class="about__body">
@@ -153,6 +155,140 @@
 							<input class="subscribe__email" type="text" placeholder="Email">
 							<input class="subscribe__button" type="submit" value="Submit">
 						</form>
+					</div>
+				</div>
+			</section>
+
+			<!--? ==================== Reviews -============================ -->
+			<section class="reviews">
+				<div class="reviews__container">
+					<div class="reviews__body">
+						<div class="reviews__cells">
+							<div class="reviews__cell cell">
+								<div class="cell__rating">
+									<div class="cell__rating rating">
+										<div class="rating__body">
+											<div class="rating__active"></div>
+											<div class="rating__items">
+												<input class="rating__item" type="radio" value="1" name="rating">
+												<input class="rating__item" type="radio" value="2" name="rating">
+												<input class="rating__item" type="radio" value="3" name="rating">
+												<input class="rating__item" type="radio" value="4" name="rating">
+												<input class="rating__item" type="radio" value="5" name="rating">
+											</div>
+										</div>
+										<div class="rating__value">4.2</div>
+									</div>
+								</div>
+								<div class="cell__text">
+									I can’t recommend this podcast enough
+								</div>
+								<div class="cell__author">Betty Lacey</div>
+							</div>
+							<div class="reviews__cell cell">
+								<div class="cell__rating">
+									<div class="cell__rating rating">
+										<div class="rating__body">
+											<div class="rating__active"></div>
+											<div class="rating__items">
+												<input class="rating__item" type="radio" value="1" name="rating">
+												<input class="rating__item" type="radio" value="2" name="rating">
+												<input class="rating__item" type="radio" value="3" name="rating">
+												<input class="rating__item" type="radio" value="4" name="rating">
+												<input class="rating__item" type="radio" value="5" name="rating">
+											</div>
+										</div>
+										<div class="rating__value">5</div>
+									</div>
+								</div>
+								<div class="cell__text">
+									Jacob is the best in the business
+								</div>
+								<div class="cell__author">Adam Driver</div>
+							</div>
+							<div class="reviews__cell cell">
+								<div class="cell__rating rating">
+									<div class="rating__body">
+										<div class="rating__active"></div>
+										<div class="rating__items">
+											<input class="rating__item" type="radio" value="1" name="rating">
+											<input class="rating__item" type="radio" value="2" name="rating">
+											<input class="rating__item" type="radio" value="3" name="rating">
+											<input class="rating__item" type="radio" value="4" name="rating">
+											<input class="rating__item" type="radio" value="5" name="rating">
+										</div>
+									</div>
+									<div class="rating__value">5</div>
+								</div>
+								<div class="cell__text">
+									Every episode is a gem!
+								</div>
+								<div class="cell__author">Jessica Knowl</div>
+							</div>
+							<div class="reviews__cell cell">
+								<div class="cell__rating">
+									<div class="cell__rating rating">
+										<div class="rating__body">
+											<div class="rating__active"></div>
+											<div class="rating__items">
+												<input class="rating__item" type="radio" value="1" name="rating">
+												<input class="rating__item" type="radio" value="2" name="rating">
+												<input class="rating__item" type="radio" value="3" name="rating">
+												<input class="rating__item" type="radio" value="4" name="rating">
+												<input class="rating__item" type="radio" value="5" name="rating">
+											</div>
+										</div>
+										<div class="rating__value">4.6</div>
+									</div>
+								</div>
+								<div class="cell__text">
+									A wealth of audio knowledge
+								</div>
+								<div class="cell__author">Marcus Brown</div>
+							</div>
+							<div class="reviews__cell cell">
+								<div class="cell__rating">
+									<div class="cell__rating rating">
+										<div class="rating__body">
+											<div class="rating__active"></div>
+											<div class="rating__items">
+												<input class="rating__item" type="radio" value="1" name="rating">
+												<input class="rating__item" type="radio" value="2" name="rating">
+												<input class="rating__item" type="radio" value="3" name="rating">
+												<input class="rating__item" type="radio" value="4" name="rating">
+												<input class="rating__item" type="radio" value="5" name="rating">
+											</div>
+										</div>
+										<div class="rating__value">4.5</div>
+									</div>
+								</div>
+								<div class="cell__text">
+									Whoa whoa, let me take some notes!
+								</div>
+								<div class="cell__author">Scott Adams</div>
+							</div>
+							<div class="reviews__cell cell">
+								<div class="cell__rating">
+									<div class="cell__rating rating">
+										<div class="rating__body">
+											<div class="rating__active"></div>
+											<div class="rating__items">
+												<input class="rating__item" type="radio" value="1" name="rating">
+												<input class="rating__item" type="radio" value="2" name="rating">
+												<input class="rating__item" type="radio" value="3" name="rating">
+												<input class="rating__item" type="radio" value="4" name="rating">
+												<input class="rating__item" type="radio" value="5" name="rating">
+											</div>
+										</div>
+										<div class="rating__value">5</div>
+									</div>
+								</div>
+								<div class="cell__text">
+									I’ve upped my game considerably since I started listening
+								</div>
+								<div class="cell__author">Steven Blast</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
