--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,10 +23,10 @@
 				</div>
 				<div class="navbar__menu" id="navbar__menu">
 					<ul class="navbar__list">
-						<li><a class="navbar__link anchor" href="#Home">Home</a></li>
-						<li><a class="navbar__link anchor" href="#Episodes">Episodes</a></li>
-						<li><a class="navbar__link anchor" href="#About">About</a></li>
-						<li><a class="navbar__link anchor" href="#Contact">Contact</a></li>
+						<li><a class="navbar__link anchor" id="navbar__link" href="#Home">Home</a></li>
+						<li><a class="navbar__link anchor" id="navbar__link" href="#Episodes">Episodes</a></li>
+						<li><a class="navbar__link anchor" id="navbar__link" href="#About">About</a></li>
+						<li><a class="navbar__link anchor" id="navbar__link" href="#Contact">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -42,18 +42,18 @@
 						</div>
 						<div class="page-header__content">
 							<div class="page-header__text">
-								<h1>Take your podcast to the <br> </h1>
-								<h1><span class="page-header__span1">next</span>
-								<span class="page-header__span2">level</span></h1> 
+								<h1 class="page-header__h1 _animItems">Take your podcast to the <br> </h1>
+								<h1><span class="page-header__span1 _animItems">next</span>
+								<span class="page-header__span2 _animItems">level</span></h1> 
 							</div>
 							<div class="page-header__listen">
 								<h4>Listen on</h4>
 								<div class="page-header__icons">
-									<a href="#"><img class="page-header__icon" src="../PICS/page_header/spotify.png" alt="spotify"></a>
-									<a href="#"><img class="page-header__icon" src="../PICS/page_header/iheartradio.png" alt="iheartradio"></a>
-									<a href="#"><img class="page-header__icon" src="../PICS/page_header/soundcloud.png" alt="soundcloud"></a>
-									<a href="#"><img class="page-header__icon" src="../PICS/page_header/deezer.png" alt="deezer"></a>
-									<a href="#"><img class="page-header__icon" src="../PICS/page_header/applemusic.png" alt="applemusic"></a>
+									<a class="_animItems no-remove" href="#"><img class="page-header__icon" src="../PICS/page_header/spotify.png" alt="spotify"></a>
+									<a class="_animItems no-remove" href="#"><img class="page-header__icon" src="../PICS/page_header/iheartradio.png" alt="iheartradio"></a>
+									<a class="_animItems no-remove" href="#"><img class="page-header__icon" src="../PICS/page_header/soundcloud.png" alt="soundcloud"></a>
+									<a class="_animItems no-remove" href="#"><img class="page-header__icon" src="../PICS/page_header/deezer.png" alt="deezer"></a>
+									<a class="_animItems no-remove" href="#"><img class="page-header__icon" src="../PICS/page_header/applemusic.png" alt="applemusic"></a>
 								</div>
 							</div>	
 						</div>
@@ -65,12 +65,13 @@
 			<section class="latest-episodes" id="Episodes">
 				<div class="latest-episodes__container">
 					<div class="latest-episodes__titel title">
-						<h1 class="title__text">Latest episodes</h1>
-						<button class="title__button">View all episodes</button>
+						<h1 class="title__text _animItems">Latest episodes</h1>
+						<button class="title__button _animItems">View all episodes</button>
 					</div>
 					<div class="latest-episodes__body">
 						<div class="latest-episodes__items">
-							<div class="latest-episodes__item item">
+
+							<div class="latest-episodes__item item _animItems">
 								<div class="item__body">
 									<div class="item__pic"><img src="../PICS/latest_episodes/3.jpg" alt="pic"></div>
 									<div class="item__content">
@@ -86,7 +87,7 @@
 								</div>								
 							</div>			
 
-							<div class="latest-episodes__item item">
+							<div class="latest-episodes__item item _animItems">
 								<div class="item__body">
 									<div class="item__pic"><img src="../PICS/latest_episodes/2.jpg" alt="pic"></div>
 									<div class="item__content">
@@ -101,7 +102,7 @@
 								</div>								
 							</div>		
 
-							<div class="latest-episodes__item item">
+							<div class="latest-episodes__item item _animItems">
 								<div class="item__body">
 									<div class="item__pic"><img src="../PICS/latest_episodes/1.jpg" alt="pic"></div>
 									<div class="item__content">
@@ -126,14 +127,14 @@
 					<div class="about__body">
 						<div class="about__content">
 							<div class="about__circle circle">
-								<div class="circle__body"><span class="circle__arrow"></span></div>
-								<div class="circle__label">Meet your host</div>
+								<div class="circle__body _animItems no-remove"><span class="circle__arrow"></span></div>
+								<div class="circle__label _animItems no-remove">Meet your host</div>
 							</div>
-							<h1 class="about__title">Jacob Paulaner</h1>
+							<h1 class="about__title _animItems">Jacob Paulaner</h1>
 							<div class="about__text">
-								<p>Jacob has a background in audio engineering, and has
+								<p class="_animItems">Jacob has a background in audio engineering, and has
 									been podcasting since the early days.</p>
-								<p>He’s here to help you level up your game by
+								<p class="_animItems">He’s here to help you level up your game by
 									sharing everything he’s learned along the way.</p>
 							</div>
 							
@@ -147,13 +148,13 @@
 				<div class="subscribe__container">
 					<div class="subscribe__body">
 						<div class="subscribe__content">
-							<div class="subscribe__subtitle">Email Newsletter</div>
-							<h1 class="subscribe__title">Subscribe for updates</h1>
+							<div class="subscribe__subtitle _animItems">Email Newsletter</div>
+							<h1 class="subscribe__title _animItems">Subscribe for updates</h1>
 						</div>
 						<form class="subscribe__form" action="">
-							<input class="subscribe__name" type="text" placeholder="Name">
-							<input class="subscribe__email" type="text" placeholder="Email">
-							<input class="subscribe__button" type="submit" value="Submit">
+							<input class="subscribe__name _animItems no-remove" type="text" placeholder="Name">
+							<input class="subscribe__email _animItems no-remove" type="text" placeholder="Email">
+							<input class="subscribe__button _animItems no-remove" type="submit" value="Submit">
 						</form>
 					</div>
 				</div>
@@ -164,7 +165,8 @@
 				<div class="reviews__container">
 					<div class="reviews__body">
 						<div class="reviews__cells">
-							<div class="reviews__cell cell">
+
+							<div class="reviews__cell cell _animItems">
 								<div class="cell__rating">
 									<div class="cell__rating rating">
 										<div class="rating__body">
@@ -185,7 +187,7 @@
 								</div>
 								<div class="cell__author">Betty Lacey</div>
 							</div>
-							<div class="reviews__cell cell">
+							<div class="reviews__cell cell _animItems">
 								<div class="cell__rating">
 									<div class="cell__rating rating">
 										<div class="rating__body">
@@ -206,7 +208,7 @@
 								</div>
 								<div class="cell__author">Adam Driver</div>
 							</div>
-							<div class="reviews__cell cell">
+							<div class="reviews__cell cell _animItems">
 								<div class="cell__rating rating">
 									<div class="rating__body">
 										<div class="rating__active"></div>
@@ -225,7 +227,7 @@
 								</div>
 								<div class="cell__author">Jessica Knowl</div>
 							</div>
-							<div class="reviews__cell cell">
+							<div class="reviews__cell cell _animItems">
 								<div class="cell__rating">
 									<div class="cell__rating rating">
 										<div class="rating__body">
@@ -246,7 +248,7 @@
 								</div>
 								<div class="cell__author">Marcus Brown</div>
 							</div>
-							<div class="reviews__cell cell">
+							<div class="reviews__cell cell _animItems">
 								<div class="cell__rating">
 									<div class="cell__rating rating">
 										<div class="rating__body">
@@ -267,7 +269,7 @@
 								</div>
 								<div class="cell__author">Scott Adams</div>
 							</div>
-							<div class="reviews__cell cell">
+							<div class="reviews__cell cell _animItems">
 								<div class="cell__rating">
 									<div class="cell__rating rating">
 										<div class="rating__body">
